[package]
name = "porp"
version = "0.1.0"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[lib]
name = "porp"
path = "src/lib.rs"

[[bin]]
name = "porp_bin"
path = "src/bin/main.rs"

[dependencies]
glium = "0.13.5"
time = "0.1.34"
image = "0.6.1"
scoped_threadpool = "0.1.7"
rand = "0.3.14"
num = "0.1.31"
